fix(addTask): improved readebility on small screens

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -364,6 +364,13 @@ body::-webkit-scrollbar {
   }
 }
 
+.side-overlay.open .side-panel {
+    height: 100vh !important;
+    max-width: 100vw;
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+  }
+
 @media (max-width: 398px) {
   .h1_privacy_policy {
     font-size: 25px !important;
